Changes to json file storage, serial comms etc

--- a/patioLightsHost/www/index.html
+++ b/patioLightsHost/www/index.html
@@ -78,6 +78,11 @@
                         <input name="bulbDelay1" value="750" min="500" max="9999" />
                     </div>
 
+                    <div class="parameter">
+                        Width:
+                        <input name="width" value="5" min="1" max="99" />
+                    </div>
+
                     <input type="submit" value="Submit" />
                 </p>
             </form>
