Added other patterns to html

--- a/patioLightsHost/www/index.html
+++ b/patioLightsHost/www/index.html
@@ -55,6 +55,9 @@
                             <option value="1">Blink Color 1 and 2</option>
                             <option value="2">Pulse Color 1 and 2</option>
                             <option value="3">Hard Scroll Color 1 and 2</option>
+                            <option value="4">Smooth Scroll Color 1 and 2</option>
+                            <option value="7">Larson Scanner</option>
+                            <option value="a">Red White and Blue</option>
                             <!-- Other patterns aren't working.. yet. This is work in progress-->
                         </select>
                     </div>
