Added off preset. Adjusted default configuration to match setup.

--- a/patioLightsHost/www/index.html
+++ b/patioLightsHost/www/index.html
@@ -24,6 +24,7 @@
             <button onclick="setPreset(this);" id="presetGameDay" >Seahawks Game Preset</button>
             <button onclick="setPreset(this);" id="presetXMAS">X-Mas Preset</button>
             <button onclick="setPreset(this);" id="presetNormal">Normal Preset</button>
+            <button onclick="setPreset(this);" id="presetOff">Off</button>
         </div>
             <!-- A lot of this code is being referenced from Internet-Xmas-Tree -->
         <form id="lightForm" action="submit.php" method="get">
