Added random blinking patterns to the web interface and (I think) fixed lightbulb color selection

--- a/patioLightsHost/www/index.html
+++ b/patioLightsHost/www/index.html
@@ -73,6 +73,8 @@
                     <option value="3">Hard Scroll Color 1 and 2</option>
                     <option value="4">Smooth Scroll Color 1 and 2</option>
                     <option value="7">Larson Scanner</option>
+					<option value="8">Random Blinking</option>
+					<option value="8">Random Blinking with Decay</option>
                     <option value="a">Red White and Blue</option>
                     <!-- Other patterns aren't working.. yet. This is work in progress-->
                 </select>
